@@ -1,3 +1,5 @@
+* Make identifiers deactivatable
+* Replace party on identifier when replacing parties
 * Add au_abn and au_acn as tax identifiers
 * Add at, ua and vn party identifiers
 
